Image + lien demandes

--- a/pages/admin_page.html
+++ b/pages/admin_page.html
@@ -41,7 +41,7 @@
                                  <p>Type de demande : Déplacement cours - Matière : Architecture des architectures - Enseignant : Eh'Manu Tu Descends</p>
                              </div>
                              <div class="card-action">
-                                 <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
+                                 <a href="admin_demande.html" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
                                  <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c1')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
@@ -56,7 +56,7 @@
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
-                                 <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c2')"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="admin_demande.html" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c2')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
@@ -70,7 +70,7 @@
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
-                                 <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c3')"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="admin_demande.html" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c3')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
@@ -84,7 +84,7 @@
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
-                                 <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c4')"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="admin_demande.html" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c4')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
