--- a/pages/admin_demande.html
+++ b/pages/admin_demande.html
@@ -46,8 +46,8 @@
                                  <p>Eh'Manu Tu Descends</p>
                              </div>
                              <div class="card-action">
-                                 <a href="#" class=" green waves-effect waves-light btn"><i class="material-icons left">check</i>Accepter</a>
-                                 <a href="#" class="red waves-effect waves-light btn"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="admin_page.html" class=" green waves-effect waves-light btn"><i class="material-icons left">check</i>Accepter</a>
+                                 <a href="admin_page.html" class="red waves-effect waves-light btn"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
