--- a/pages/etu_salle.html
+++ b/pages/etu_salle.html
@@ -66,7 +66,7 @@
 
             <div id="Formulaire">
               <div class="z-depth-2">
-                <h6>Sélectionner la salle que ou souhaité ou ses caractéristiques : #cours sélectionné</h6>
+                <h6>Sélectionner la salle que vous souhaité et/ou ses caractéristiques : #cours sélectionné</h6>
 
                   <form action="#">
                     <div class="row DispayList">
@@ -107,9 +107,9 @@
                          
                             <select multiple>
                               <option value="" disabled selected>Nom Salle</option>
-                              <option value="1">Option 1</option>
-                              <option value="2">Option 2</option>
-                              <option value="3">Option 3</option>
+                              <option value="1">C05</option>
+                              <option value="2">TD4</option>
+                              <option value="3">P22</option>
                             </select>
                        
                       </div>
