--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -43,7 +43,7 @@
           <div class="col s10 offset-s2" id="Panel">
             <div id="EDT">
               <div id="calendar"></div>
-              <script src="../js/calendrierSuggestion.js"></script>
+              <script src="../js/calendrier.js"></script>
             </div>
 
             <br>
@@ -74,7 +74,7 @@
                         <p>
                           <label>
                             <input type="checkbox" />
-                            <span>Suggestion 1</span>
+                            <span>Lundi 4 Avril</span>
                           </label>
                         </p>
                         <p>
