final final bapt

--- a/pages/admin_demande.html
+++ b/pages/admin_demande.html
@@ -40,10 +40,14 @@
                                  <span class="card-title">Baptiste INGOGLIA</span>
                                  <h6>Type de demande :</h6>
                                  <p>Déplacement cours</p>
+                                 <h6>Date d'origine</h6>
+                                 <p>06/06/2019 à 9h30</p>
+                                 <h6>Date demandée</h6>
+                                 <p>08/06/2019 à 16h30</p>
                                  <h6>Matière :</h6>
                                  <p>Architecture des architectures</p>
                                  <h6>Enseignant :</h6>
-                                 <p>Eh'Manu Tu Descends</p>
+                                 <p>Catherine Cléder</p>
                              </div>
                              <div class="card-action">
                                  <a href="admin_page.html" class=" green waves-effect waves-light btn"><i class="material-icons left">check</i>Accepter</a>
