--- a/pages/admin_page.html
+++ b/pages/admin_page.html
@@ -2,7 +2,7 @@
  <html>
 
  <head>
-     <meta charset="utf-8"/>
+     <meta charset="utf-8" />
      <!--Import Google Icon Font-->
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
      <!--Import materialize.css-->
@@ -18,18 +18,18 @@
  <body>
      <div class="container-fluid fill-height">
          <div class="row">
-              <div class="col s2 l2 custom.cprimary" id="Header">
-                <div>
-                  <h4>Bonjour Admin !</h4>
-                  <a class="btn-floating btn-large waves-effect waves-light btn hide-on-med-and-up" href="connexion.html" id="BtnDeco"> <i class="material-icons">exit_to_app</i></a>
-                  <a class="waves-effect waves-light btn hide-on-small-only" href="connexion.html" id="BtnDeco">Deconnexion</a>
-                </div>
-                <div>
-                  <img src="../imgs/logo_app.png" class="responsive-img" alt="Logo AppEDT">
-                  <h3>AppEDT</h3>
-                </div>
-                <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
-              </div>
+             <div class="col s2 l2 custom.cprimary" id="Header">
+                 <div>
+                     <h4>Bonjour Admin !</h4>
+                     <a class="btn-floating btn-large waves-effect waves-light btn hide-on-med-and-up" href="connexion.html" id="BtnDeco"> <i class="material-icons">exit_to_app</i></a>
+                     <a class="waves-effect waves-light btn hide-on-small-only" href="connexion.html" id="BtnDeco">Deconnexion</a>
+                 </div>
+                 <div>
+                     <img src="../imgs/logo_app.png" class="responsive-img" alt="Logo AppEDT">
+                     <h3>AppEDT</h3>
+                 </div>
+                 <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
+             </div>
 
              <div class="col s10 offset-s2" id="Panel">
 
@@ -38,7 +38,7 @@
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
                                  <span class="card-title">Baptiste INGOGLIA</span>
-                                 <p>Type de demande : Déplacement cours - Matière : Architecture des architectures - Enseignant : Eh'Manu Tu Descends</p>
+                                 <p>Type de demande : Déplacement cours - Matière : Architecture des Ordinateurs - Enseignant : Emmanuel Malandin</p>
                              </div>
                              <div class="card-action">
                                  <a href="admin_demande.html" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
@@ -51,11 +51,11 @@
                      <div class="col s12 ">
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
-                                 <span class="card-title">Baptiste INGOGLIA</span>
-                                 <p>Type de demande : Déplacement cours - Matière : Architecture des architectures - Enseignant : Eh'Manu Tu Descends</p>
+                                 <span class="card-title">Léo Arurault</span>
+                                 <p>Type de demande : Déplacement cours - Matière : Architecture des Systèmes d'exploitation - Enseignant : Emmanuel Malandin</p>
                              </div>
                              <div class="card-action">
-                                 <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
+                                 <a href="admin_demande.html" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
                                  <a href="admin_demande.html" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c2')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
@@ -65,8 +65,8 @@
                      <div class="col s12 ">
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
-                                 <span class="card-title">Baptiste INGOGLIA</span>
-                                 <p>Type de demande : Déplacement cours - Matière : Architecture des architectures - Enseignant : Eh'Manu Tu Descends</p>
+                                 <span class="card-title">David Heng</span>
+                                 <p>Type de demande : Déplacement cours - Matière : Informatique Industrielle - Enseignant : Emmanuel Malandin</p>
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
@@ -79,8 +79,8 @@
                      <div class="col s12 ">
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
-                                 <span class="card-title">Baptiste INGOGLIA</span>
-                                 <p>Type de demande : Déplacement cours - Matière : Architecture des architectures - Enseignant : Eh'Manu Tu Descends</p>
+                                 <span class="card-title">Baptiste DeuxGoglia</span>
+                                 <p>Type de demande : Déplacement cours - Matière : Architecture des architectures - Enseignant : Catherine Cléder</p>
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
