final version after test prof

--- a/pages/prof_notifications.html
+++ b/pages/prof_notifications.html
@@ -74,7 +74,7 @@
 
 
                 <li><a href="https://www.jquery-az.com/javascript-tutorials/"><i class="material-icons">school</i></a></li>
-                <li><a href="prof_passerdemandedep.html"><span >Passer une demande de déplacement</span></a></li>
+                <li><a href="prof_selection.html"><span >Passer une demande de déplacement</span></a></li>
 
 
                 <li><a href="https://www.jquery-az.com/bootstrap-tips-tutorials/"><i class="material-icons">search</i></a></li>
@@ -91,7 +91,7 @@
         <table class = "striped bordered">
             <thead>
             <tr>
-                <th>Demande</th>
+                <th>Demandes</th>
                 <th>Heure</th>
                 <th></th>
             </tr>
@@ -101,18 +101,18 @@
             <tr>
 
 
-                <td>Vous avez un demande de déplacement de la part de 4A IPS</td>
+                <td>Vous avez une demande de déplacement de la part de 4A IPS</td>
                 <td>12:36</td>
                 <td> <a href="voirdemande1.html"> Voir</a></td>
             </tr>
 
             <tr>
-                <td>Vous avez un demande de déplacement de la part de 4A IPS</td>
+                <td>Vous avez une demande de déplacement de la part de 4A IPS</td>
                 <td>11:20</td>
                 <td> <a href="pages/etu_page.html"> Voir</a></td>            </tr>
 
             <tr>
-                <td>Vous avez un demande de déplacement de la part de 4A IPS</td>
+                <td>Vous avez une demande de déplacement de la part de 4A IPS</td>
                 <td>10:56</td>
                 <td> <a href="#"> Voir</a></td>            </tr>
             </tbody>
